--- a/financial_management/views/financial_view.xml
+++ b/financial_management/views/financial_view.xml
@@ -125,6 +125,15 @@
                 </p>
             </field>
         </record>
+        <record id="action_financial_cron" model="ir.actions.server">
+            <field name="name">Actulizar datos</field>
+            <field name="model_id" ref="financial_management.model_financial_management"/>
+            <field name="type">ir.actions.server</field>
+            <field name="groups_id" eval="[(4, ref('base.group_user'))]"/>
+            <field name="binding_model_id" ref="financial_management.model_financial_management"/>
+            <field name="state">code</field>
+            <field name="code">action = model.cron_change_values()</field>
+        </record>
 
         
 
@@ -145,6 +154,14 @@
             groups="base.group_user"
             parent="main_menu_financial_manager"
             sequence="1" />
+
+            <menuitem
+            id="formulario_financiero_menu_cron"
+            name="Actualizar Datos"
+            action="action_financial_cron"
+            groups="base.group_user"
+            parent="main_menu_financial_manager"
+            sequence="2" />
 
             
 
